JDK 9,10,11 support